[package]
name = "rischialess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flawless = { version = "1.0.0-alpha.10", features = ["clap", "dirs", "reqwest"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
chrono = { version = "0.4.31", features = ["serde"] }
