[package]
edition = "2021"
name = "rischialess"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
flawless = "1.0.0-alpha.10+finnish-reindeer"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.195", features = ["derive"] }
url = { version = "2.5.0", features = [] }
serde_json = { version = "1.0.111", features = [] }
diff = "0.1.13"
